Wed Aug 26 02:01:44 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/tcpip/HelloWorld/HelloWorld_Base.mpc:
        * examples/arch/tcpip/HelloWorld/HelloWorld_Basic_Impl.h:
        * examples/arch/tcpip/HelloWorld/HelloWorld_Basic_Impl.mpc:
        * examples/arch/tcpip/HelloWorld/TCPIP_HelloWorld_svnt.h:
        * examples/arch/tcpip/HelloWorld/TCPIP_HelloWorld_svnt.cpp:

          . Updated example to latest version of CoSMIC.

        * examples/arch/tcpip/HelloWorld/HelloWorld_Impl.h:
        * examples/arch/tcpip/HelloWorld/HelloWorld_Impl.cpp:

          Removed these files.

Sat Aug 22 01:03:48 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/Log_T.h:

          . Changed the location of the export include.

        * cuts/utils/logging/client/Logger_i.h:
        * cuts/utils/logging/client/Logger_i.inl:
        * cuts/utils/logging/client/Logger_i.cpp:

        * cuts/utils/logging/server/LoggingServer.idl:

          . handle_messages () is now a oneway call.

        * cuts/utils/logging/server/Logging_Server.cpp:

          . Added support for setting the number of ORB threads.

          . Added suppo

        * cuts/utils/logging/server/LoggingServer_i.cpp:
        * cuts/utils/testing/svcs/logging/Testing_Log_Message_Listener.cpp:

          . Removed unnecessary log messages.

        * cuts/utils/testing/svcs/logging/Testing_Log_Message_Listener.h:
        * cuts/utils/testing/svcs/logging/Testing_Log_Message_Listener.inl:

          . Missing source files.

        * cuts/utils/testing/Test_Options.h:
        * cuts/utils/testing/Testing_App.h:
        * cuts/utils/testing/Testing_App.cpp:
        * cuts/utils/testing/Testing_App_Base.h:
        * cuts/utils/testing/svcs/server/TestManager_i.h:
        * cuts/utils/testing/svcs/server/TestManager_i.cpp:
        * cuts/utils/testing/svcs/server/testing.idl:

          . Added support for remote shutdown of the test manager.
