@@ -12,6 +12,7 @@ project (CUTS_BE) : picml_udm, boost_base, cuts_cosmic {
   Source_Files {
     CoWorkEr_Cache.cpp
 
+    BE_algorithm.cpp
     BE_Assembly_Generator.cpp
     BE_Assembly_Generator_Preprocessor.cpp
     BE_CoWorkEr_Generator.cpp
@@ -37,7 +38,6 @@ project (CUTS_BE) : picml_udm, boost_base, cuts_cosmic {
 
   Header_Files {
     BE.h
-    BE_algorithm.h
     BE_List_T.h
 
     BE_Preprocessor_Handlers_T.h
